[workspace]
members = ["programs/*"]
exclude = [
  "programs/abc",
  "programs/zero-copy",
  "programs/zero-cpi",
  "programs/puppet",
]
# "programs/token-contract"
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
