[package]
name = "abc"
version = "0.1.0"
description = "Solana Anchor Demo3"
rust-version = "1.68.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "abc"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []
default = []

[dependencies]
anchor-lang = "0.29.0"
puppet = { path = "../puppet", features = ["cpi"] }
