[package]
name = "abc"
version = "0.1.0"
description = "from Anchor repo/examples"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "abc"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
puppet = { path = "../puppet", features = ["cpi"] }
