[package]
name = "puppet"
version = "0.1.0"
description = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "puppet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
