[package]
name = "zero-copy"
version = "0.1.0"
description = "from Anchor repo/tests"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zero_copy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }

[dev-dependencies]
anchor-client = { version = "0.30.1", features = ["debug", "async"] }
solana-program-test = "1.16"
