[package]
name = "zero-cpi"
version = "0.1.0"
description = ""
rust-version = "1.68.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zero_cpi"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
zero-copy = { path = "../zero-copy", features = ["cpi"] }
